# UNG

./: .gitignore  README.md
codes/: CMakeLists.txt
codes/apps/: CMakeLists.txt  build_UNG_index.cpp  fanns_survey_helpers.cpp  index_construction.cpp  query_execution.cpp  search_UNG_index.cpp
codes/include/: storage.h  uni_nav_graph.h
codes/src/: CMakeLists.txt  filtered_scan.cpp  storage.cpp  trie.cpp  uni_nav_graph.cpp
codes/test/: CMakeLists.txt
codes/tools/: CMakeLists.txt  compute_groundtruth.cpp
codes/vamana/: CMakeLists.txt
data/: .gitignore
